--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -1,7 +1,7 @@
 ServerSignature Off
 AddDefaultCharset UTF-8
-#Возможность обращения к файлам без указания их расширения - может не работать на некоторых хостингах
-#Options -MultiViews
+#Возможность обращения к файлам без указания их расширения
+Options -MultiViews
 #запуск движка
 RewriteEngine On
 #файл от которого начинается работа с файлами...обычно на рабочем сайте здесь ставится слешь
